[gd_scene load_steps=3 format=3 uid="uid://cjyxx74ydckc4"]

[ext_resource type="Theme" uid="uid://bm780b5r6xff3" path="res://src/ui/themes/main/main_theme.tres" id="1_5lv3t"]
[ext_resource type="Script" path="res://src/scenes/main_menu/settings.gd" id="1_lhugb"]

[node name="Settings" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5lv3t")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_lhugb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="PaddedContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="spacer" type="Control" parent="PanelContainer/PaddedContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingsContainer" type="VBoxContainer" parent="PanelContainer/PaddedContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Header (Settings)" type="Label" parent="PanelContainer/PaddedContainer/SettingsContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Settings"

[node name="SampleTextContainer" type="PanelContainer" parent="PanelContainer/PaddedContainer/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_5lv3t")
theme_type_variation = &"UserTextBackground"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/PaddedContainer/SettingsContainer/SampleTextContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SampleText" type="Label" parent="PanelContainer/PaddedContainer/SettingsContainer/SampleTextContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"UserTextFont"
text = "The quick brown fox jumps over the lazy dog."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="spacer5" type="Control" parent="PanelContainer/PaddedContainer/SettingsContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="FontSizeLabel" type="Label" parent="PanelContainer/PaddedContainer/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Font Size"

[node name="FontSizeReadout" type="Label" parent="PanelContainer/PaddedContainer/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "16 px"

[node name="FontSizeSlider" type="HSlider" parent="PanelContainer/PaddedContainer/SettingsContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
min_value = 32.0
max_value = 128.0
step = 48.0
value = 32.0

[node name="spacer3" type="Control" parent="PanelContainer/PaddedContainer/SettingsContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/PaddedContainer/SettingsContainer"]
layout_mode = 2
columns = 2

[node name="DarkModeOptionButton2" type="Label" parent="PanelContainer/PaddedContainer/SettingsContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Dark Mode"

[node name="DarkModeOptionButton" type="OptionButton" parent="PanelContainer/PaddedContainer/SettingsContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "On"
popup/item_0/id = 0
popup/item_1/text = "Off"
popup/item_1/id = 1

[node name="spacer4" type="Control" parent="PanelContainer/PaddedContainer/SettingsContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ExitButton" type="Button" parent="PanelContainer/PaddedContainer/SettingsContainer"]
custom_minimum_size = Vector2(130, 65)
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"ButtonSecondary"
theme_override_font_sizes/font_size = 27
text = "Exit"

[node name="spacer2" type="Control" parent="PanelContainer/PaddedContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="PanelContainer/PaddedContainer/SettingsContainer/FontSizeSlider" to="." method="_on_font_size_slider_value_changed"]
[connection signal="item_selected" from="PanelContainer/PaddedContainer/SettingsContainer/GridContainer/DarkModeOptionButton" to="." method="_on_dark_mode_option_button_item_selected"]
[connection signal="pressed" from="PanelContainer/PaddedContainer/SettingsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
